--- a/index.html
+++ b/index.html
@@ -95,10 +95,7 @@
         <header class="bg-white shadow-sm sticky top-0 z-10">
             <div class="container mx-auto px-4 py-3 flex items-center justify-between">
                 <div class="flex items-center">
-                    <div class="bg-blue-500 text-white p-2 rounded-full mr-3">
-                        <i class="fas fa-comments text-xl"></i>
-                    </div>
-                    <h1 class="text-xl font-bold text-gray-800">Social Wall</h1>
+                        <img src="logo.svg">
                 </div>
                 
                 <div class="flex items-center space-x-4">
