--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
         .post:hover .post-actions {
             opacity: 1;
         }
+
+        .figma-color{ 
+            background-color:#FF5733 ;
+        }
     </style>
 </head>
 <body class="bg-gray-100 font-sans">
@@ -99,7 +103,7 @@
                 </div>
                 
                 <div class="flex items-center space-x-4">
-                    <button id="add-post-btn" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-full text-sm font-medium transition-colors">
+                    <button id="add-post-btn" class="text-white px-4 py-2 rounded-full text-sm font-medium transition-colors figma-color">
                         <i class="fas fa-plus mr-1"></i> New Post
                     </button>
                     
