added brand color to burguer menu

--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
         .figma-color{ 
             background-color:#FF5733 ;
         }
+        .fa-bars{ 
+            color:#FF5733
+        }
     </style>
 </head>
 <body class="bg-gray-100 font-sans">
