--- a/index.html
+++ b/index.html
@@ -143,10 +143,7 @@
             <div class="absolute right-0 top-0 h-full w-72 bg-white slide-in">
                 <div class="p-4 border-b border-gray-200 flex justify-between items-center">
                     <div class="flex items-center">
-                        <div class="bg-blue-500 text-white p-2 rounded-full mr-3">
-                            <i class="fas fa-comments"></i>
-                        </div>
-                        <h3 class="font-bold text-gray-800">Menu</h3>
+                       <img src="Icon.svg">
                     </div>
                     <button id="close-menu" class="text-gray-500 hover:text-gray-700">
                         <i class="fas fa-times"></i>
@@ -205,7 +202,7 @@
                             <textarea id="post-content" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" rows="4" placeholder="What's on your mind?"></textarea>
                         </div>
                         <div class="flex justify-end">
-                            <button type="submit" class="bg-blue-500 hover:bg-blue-600 text-white px-4 py-2 rounded-lg font-medium transition-colors">
+                            <button type="submit" class="figma-color text-white px-4 py-2 rounded-lg font-medium transition-colors">
                                 Post
                             </button>
                         </div>
