--- a/index.html
+++ b/index.html
@@ -74,6 +74,9 @@
         .brd-radius { 
             border-radius:6px
         }
+        .fa-bell:hover{ 
+            color:#FF5733 ;
+        }
     </style>
 </head>
 <body class="bg-gray-100 font-sans">
@@ -122,7 +125,7 @@
 
         <!-- Notification Bell -->
         <div class="fixed bottom-6 right-6 z-20">
-            <button id="notification-btn" class="bg-white w-12 h-12 brd-radius shadow-lg flex items-center justify-center text-gray-700 hover:text-blue-500 relative">
+            <button id="notification-btn" class="bg-white w-12 h-12 brd-radius shadow-lg flex items-center justify-center text-gray-700 relative">
                 <i class="fas fa-bell text-xl"></i>
                 <span id="notification-count" class="absolute -top-1 -right-1 bg-red-500 text-white text-xs brd-radius w-5 h-5 flex items-center justify-center hidden">3</span>
             </button>
