added brand color to like button

--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
         .fa-bell:hover{ 
             color:#FF5733 ;
         }
+        .fa-heart:hover{ 
+            color:#FF5733 ;
+         }
     </style>
 </head>
 <body class="bg-gray-100 font-sans">
@@ -84,18 +87,12 @@
     <div id="login-page" class="min-h-screen flex flex-col items-center justify-center p-4">
         <div class="w-full max-w-md bg-white rounded-lg shadow-md p-8">
             <div class="flex justify-center mb-8">
-                <div class="bg-blue-500 text-white p-4 brd-radius">
-                    <i class="fas fa-comments text-4xl"></i>
-                </div>
-            </div>
-            <h1 class="text-3xl font-bold text-center text-gray-800 mb-6">Welcome to Social Wall</h1>
-            <p class="text-gray-600 text-center mb-8">Connect with friends and share your thoughts</p>
-            
+                <img src="logo.svg">
+            </div>     
             <button id="google-login" class="w-full flex items-center justify-center gap-3 bg-white border border-gray-300 rounded-lg py-3 px-4 text-gray-700 font-medium hover:bg-gray-50 transition-colors mb-4">
                 <i class="fab fa-google text-red-500"></i>
                 Continue with Google
             </button>
-            
             <div class="text-center text-sm text-gray-500 mt-6">
                 By continuing, you agree to our Terms and Privacy Policy
             </div>
