added full width menu on mobile versions

--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
          .bg{
            background-color: #FFFBFA;
          }
+
+         @media screen and (max-width: 600px) {
+            .w-72 {
+            width: 100%!important;
+                 }
+            }
+           
     </style>
 </head>
 <body class="bg">
