added edit profile figma syles

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         </div>
 
         <!-- Edit Profile Page (hidden initially) -->
-        <div id="edit-profile-page" class="hidden min-h-screen bg-white fixed inset-0 z-50 overflow-y-auto">
+        <div id="edit-profile-page" class="hidden min-h-screen bg fixed inset-0 z-50 overflow-y-auto">
             <div class="container mx-auto px-4 py-6 max-w-2xl">
                 <div class="flex items-center justify-between mb-6">
                     <button id="back-to-wall" class="text-gray-500 hover:text-gray-700">
@@ -246,7 +246,7 @@
                     <div class="w-6"></div> <!-- Spacer for alignment -->
                 </div>
                 
-                <div class="bg-gray-50 rounded-lg p-6 mb-6">
+                <div class="bg-white rounded-lg p-6 mb-6">
                     <div class="flex flex-col items-center mb-6">
                         <div class="avatar-upload mb-4">
                             <div class="relative">
