--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <div id="add-post-modal" class="fixed inset-0 bg-black bg-opacity-50 z-40 hidden flex items-center justify-center p-4">
             <div class="bg-white rounded-lg shadow-xl w-full max-w-md fade-in">
                 <div class="p-4 border-b border-gray-200 flex justify-between items-center">
-                    <h3 class="font-medium text-gray-800">Create New Post</h3>
+                    <h3 class="font-medium figma-epilogue"><b>Create New Post</b></h3>
                     <button id="close-post-modal" class="text-gray-500 hover:text-gray-700">
                         <i class="fas fa-times"></i>
                     </button>
@@ -242,7 +242,7 @@
                     <button id="back-to-wall" class="text-gray-500 hover:text-gray-700">
                         <i class="fas fa-arrow-left text-xl"></i>
                     </button>
-                    <h2 class="text-xl font-bold text-gray-800">Edit Profile</h2>
+                    <h2 class="text-xl font-bold figma-epilogue">Edit Profile</h2>
                     <div class="w-6"></div> <!-- Spacer for alignment -->
                 </div>
                 
@@ -250,13 +250,11 @@
                     <div class="flex flex-col items-center mb-6">
                         <div class="avatar-upload mb-4">
                             <div class="relative">
-                                <img id="profile-avatar" src="https://ui-avatars.com/api/?name=User&background=random" alt="Profile" class="w-24 h-24 brd-radius object-cover border-4 border-white shadow">
+                                <img id="profile-avatar" src="https://ui-avatars.com/api/?name=User&background=random" alt="Profile" class="w-24 h-24 rounded-full object-cover border-4 border-white shadow">
                                 <input type="file" id="avatar-input" accept="image/*" class="hidden">
                             </div>
                         </div>
-                        <h3 id="profile-name" class="text-xl font-bold text-gray-800">User Name</h3>
                     </div>
-                    
                     <form id="profile-form">
                         <div class="mb-4">
                             <label for="name-input" class="block text-sm font-medium text-gray-700 mb-1">Display Name</label>
