--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 <div class="p-4">
                     <form id="post-form">
                         <div class="mb-4">
-                            <textarea id="post-content" class="w-full px-3 py-2 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" rows="4" placeholder="What's on your mind?"></textarea>
+                            <textarea id="post-content" class="w-full px-3 py-2 border border-gray-300 rounded-lg" rows="4" placeholder="What's on your mind?"></textarea>
                         </div>
                         <div class="flex justify-end">
                             <button type="submit" class="figma-color text-white px-4 py-2 rounded-lg font-medium transition-colors">
