added brand color to loading spinner

--- a/index.html
+++ b/index.html
@@ -98,11 +98,15 @@
             color:#D72600;
          }
 
+         .fa-spinner{ 
+            color:#D72600!important;
+          }
+
          @media screen and (max-width: 600px) {
             .w-72 {
             width: 100%!important;
                  }
-            }
+        }
 
     </style>
 </head>
