Fix close menu on logout

--- a/index.html
+++ b/index.html
@@ -656,6 +656,7 @@
                 
                 app.classList.add('hidden');
                 loginPage.classList.remove('hidden');
+                sideMenu.classList.add('hidden');
             }
         });
 
