--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
 <body class="bg">
     <!-- Login Page -->
     <div id="login-page" class="min-h-screen flex flex-col items-center justify-center p-4">
-        <div class="w-full max-w-md bg-white rounded-lg shadow-md p-8">
+        <div class="w-full max-w-md rounded-lg p-8">
             <div class="flex justify-center mb-8">
-                <img src="logo.svg">
+                <img src="splashsvg.svg">
             </div>     
             <button id="google-login" class="w-full flex items-center justify-center gap-3 bg-white border border-gray-300 rounded-lg py-3 px-4 text-gray-700 font-medium hover:bg-gray-50 transition-colors mb-4">
                 <i class="fab fa-google text-red-500"></i>
@@ -220,14 +220,14 @@
             <div class="bg-white rounded-lg shadow-xl w-full max-w-md fade-in">
                 <div class="p-4 border-b border-gray-200 flex justify-between items-center">
                     <h3 class="font-medium figma-epilogue"><b>Create New Post</b></h3>
-                    <button id="close-post-modal" class="text-gray-500 hover:text-gray-700">
+                    <button id="close-post-modal" class="text-gray-500">
                         <i class="fas fa-times"></i>
                     </button>
                 </div>
                 <div class="p-4">
                     <form id="post-form">
                         <div class="mb-4">
-                            <textarea id="post-content" class="w-full px-3 py-2 border border-gray-300 rounded-lg" rows="4" placeholder="What's on your mind?"></textarea>
+                            <textarea id="post-content" class="w-full px-3 py-2 border rounded-lg" rows="4" placeholder="What's on your mind?"></textarea>
                         </div>
                         <div class="flex justify-end">
                             <button type="submit" class="figma-color text-white px-4 py-2 rounded-lg font-medium transition-colors">
