added close button with figma styles

--- a/index.html
+++ b/index.html
@@ -75,9 +75,12 @@
         .figma-color{ 
             background-color:#FF5733 ;
         }
-        .fa-bars{ 
+        .fa-bars,.fa-times{ 
             color:#FF5733
         }
+        .fa-times{ 
+            font-size: 2em;
+         }
         .brd-radius { 
             border-radius:6px
         }
