Added new copywriting for followers & likes menu

--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                         </li>
                         <li class="mb-2">
                             <button id="followers-btn" class="w-full text-left px-4 py-3 rounded-lg hover:bg-gray-100 transition-colors flex items-center">
-                                Followers
+                                Followers & Likes
                             </button>
                         </li>
                         <li>
