--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                 <div class="p-4">
                     <form id="post-form">
                         <div class="mb-4">
-                            <textarea id="post-content" class="w-full px-3 py-2 border rounded-lg" rows="4" placeholder="Inspire People"></textarea>
+                            <textarea id="post-content" class="w-full px-3 py-2 border rounded-lg" rows="4" placeholder="Inspire People..."></textarea>
                         </div>
         <div class="flex justify-end">
                             <button type="submit" class="figma-color text-white px-4 py-2 border rounded-lg font-medium transition-colors">
