Added splash screen introduction text

--- a/index.html
+++ b/index.html
@@ -305,15 +305,21 @@
             color: #d1d5db;
         }
 
+        .splash-text{
+            text-align: center;
+        }
+
     </style>
 </head>
 <body class="bg">
     <!-- Login Page -->
     <div id="login-page" class="min-h-screen flex flex-col items-center justify-center p-4">
         <div class="w-full max-w-md rounded-lg p-8">
-            <div class="flex justify-center mb-8">
+            <div class="flex justify-center">
                 <img src="splashsvg.svg">
-            </div>     
+            </div> 
+            <div class="splash-text mb-8 text-gray-700 ">Share self-motivation, celebrate small wins, and stay uplifted — together.
+            </div>    
             <button id="google-login" class="w-full flex items-center justify-center gap-3 bg-white border border-gray-300 rounded-lg py-3 px-4 text-gray-700 font-medium hover:bg-gray-50 transition-colors mb-4">
                 <i class="fab fa-google text-red-500"></i>
                 Continue with Google
