--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                 <div class="p-4">
                     <form id="post-form">
                         <div class="mb-4">
-                            <textarea id="post-content" class="w-full px-3 py-2 border rounded-lg" rows="4" placeholder="Inspire People..."></textarea>
+                            <textarea id="post-content" class="w-full px-3 py-2 border rounded-lg focus:outline-none" rows="4" placeholder="Inspire People..."></textarea>
                         </div>
         <div class="flex justify-end">
                             <button type="submit" class="figma-color text-white px-4 py-2 border rounded-lg font-medium transition-colors">
@@ -488,12 +488,12 @@
                     <form id="profile-form">
                         <div class="mb-4">
                             <label for="name-input" class="block text-sm font-medium text-gray-700 mb-1">Display Name</label>
-                            <input type="text" id="name-input" class="w-full px-3 py-2 border rounded-lg">
+                            <input type="text" id="name-input" class="w-full px-3 py-2 border rounded-lg focus:outline-none">
                         </div>
                         
                         <div class="mb-4">
                             <label for="bio-input" class="block text-sm font-medium text-gray-700 mb-1">Bio</label>
-                            <textarea id="bio-input" class="w-full px-3 py-2 border rounded-lg" rows="3"></textarea>
+                            <textarea id="bio-input" class="w-full px-3 py-2 border rounded-lg focus:outline-none" rows="3" ></textarea>
                         </div>
                         
                         <div class="flex justify-end">
