--- a/index.html
+++ b/index.html
@@ -308,6 +308,9 @@
         .splash-text{
             text-align: center;
         }
+        .notification-w{ 
+            width: 18rem;
+         }
 
     </style>
 </head>
@@ -360,7 +363,7 @@
         </div>
 
         <!-- Notification Panel -->
-        <div id="notification-panel" class="fixed bottom-20 right-6 w-72 bg-white rounded-lg shadow-xl z-10 hidden overflow-hidden">
+        <div id="notification-panel" class="fixed bottom-20 right-6 notification-w bg-white rounded-lg shadow-xl z-10 hidden overflow-hidden">
             <div class="p-3 border-b border-gray-200 flex justify-between items-center bg-gray-50">
                 <h3 class="font-medium text-gray-800">Notifications</h3>
                 <button id="close-notifications" class="text-gray-500 hover:text-gray-700">
