Removed horizontal scroll from likes section

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         /* Likes page styles */
         .likes-container {
             max-height: calc(100vh - 120px);
-            overflow-y: auto;
+            overflow-y: inherit;
         }
         
         .like-item {
