--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                     <ul>
                         <li class="mb-2">
                             <button id="edit-profile-btn" class="w-full text-left px-4 py-3 rounded-lg hover:bg-gray-100 transition-colors flex items-center">
-                                Edit Profile
+                                Profile
                             </button>
                         </li>
                         <li class="mb-2">
