--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
         .comment-item {
             display: flex;
             margin-bottom: 1rem;
+            margin-top: 1rem;
             animation: fadeIn 0.2s ease-in;
             position: relative;
         }
